--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": " basic message board",
   "main": "node-forum.js",
   "dependencies": {
-    "express": "^4.10.0"
+    "express": "^4.10.0",
+    "jade": "^1.7.0",
+    "mongoose": "^3.8.18"
   },
   "devDependencies": {
     "mocha": "^2.0.1"
