--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "description": " basic message board",
   "main": "node-forum.js",
   "dependencies": {
+    "body-parser": "^1.9.1",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.3.3",
     "express": "^4.10.0",
+    "express-session": "^1.9.1",
     "jade": "^1.7.0",
-    "mongoose": "^3.8.18"
+    "mongoose": "^3.8.18",
+    "morgan": "^1.4.1",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "mocha": "^2.0.1"
