--- a/site/package.json
+++ b/site/package.json
@@ -16,7 +16,9 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "mocha": "^2.0.1"
+    "chai": "^1.9.2",
+    "mocha": "^2.0.1",
+    "zombie": "^2.1.1"
   },
   "scripts": {
     "test": "mocha"
